allow to build without openjfx jars