@@ -54,10 +54,7 @@
 
     <!-- recent debian jdk with OpenJFX -->
     <condition property="is.debian">
-        <and>
-            <available file="/usr/share/java/javafx-base.jar"/>
-            <matches string="${ant.java.version}" pattern="1[1-9]|[2-9][0-9]"/>
-        </and>
+        <matches string="${ant.java.version}" pattern="1[1-9]|[2-9][0-9]"/>
     </condition>
 
     <condition property="is.java11">
@@ -116,17 +113,16 @@
 
     <target name="compile-debian" if="is.debian">
         <mkdir dir="target/classes"/>
-        <echo level="info" message="Compile on debian with openjfx"/>
+        <echo level="info" message="Compile on debian"/>
         <javac srcdir="src/java" destdir="target/classes" encoding="UTF-8"
                includeantruntime="false">
             <exclude name="davmail/service/DavService.java" unless="is.winrun4j"/>
+            <exclude name="davmail/exchange/auth/O365InteractiveAuthenticatorFrame.java" unless="is.javafx"/>
+            <exclude name="davmail/exchange/auth/O365InteractiveJSLogger.java" unless="is.javafx"/>
             <compilerarg value="--add-exports"/>
             <compilerarg value="java.naming/com.sun.jndi.ldap=ALL-UNNAMED"/>
             <compilerarg value="--add-exports"/>
             <compilerarg value="java.base/sun.net.www.protocol.https=ALL-UNNAMED"/>
-            <compilerarg value="--module-path"/>
-            <compilerarg value="/usr/share/java/javafx-base.jar:/usr/share/java/javafx-controls.jar:/usr/share/java/javafx-fxml.jar:/usr/share/java/javafx-graphics.jar:/usr/share/java/javafx-media.jar:/usr/share/java/javafx-swing.jar:/usr/share/java/javafx-web.jar"/>
-            <compilerarg value="--add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web"/>
             <classpath>
                 <path refid="classpath"/>
             </classpath>
@@ -140,6 +136,8 @@
                includeantruntime="false">
             <exclude name="davmail/exchange/auth/*Interactive*" unless="is.javafx"/>
             <exclude name="davmail/service/DavService.java" unless="is.winrun4j"/>
+            <exclude name="davmail/exchange/auth/O365InteractiveAuthenticatorFrame.java" unless="is.javafx"/>
+            <exclude name="davmail/exchange/auth/O365InteractiveJSLogger.java" unless="is.javafx"/>
             <compilerarg value="--add-exports"/>
             <compilerarg value="java.naming/com.sun.jndi.ldap=ALL-UNNAMED"/>
             <compilerarg value="--add-exports"/>
@@ -157,6 +155,8 @@
                includeantruntime="false">
             <exclude name="davmail/exchange/auth/*Interactive*" unless="is.javafx"/>
             <exclude name="davmail/service/DavService.java" unless="is.winrun4j"/>
+            <exclude name="davmail/exchange/auth/O365InteractiveAuthenticatorFrame.java" unless="is.javafx"/>
+            <exclude name="davmail/exchange/auth/O365InteractiveJSLogger.java" unless="is.javafx"/>
             <classpath>
                 <path refid="classpath"/>
             </classpath>
